# scrape-gateway

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  registry.yml  scrape-gateway.example.yml
.github/workflows/: ci.yml
docs/: SKILL.md  TODO.md  architecture.md  commands.md  configuration.md  extensions.md  http-service.md  mcp-coolify-ops.md  providers.md  python-api.md
docs/archive/: Scraping Router Options.md
examples/: basic.py  books.recipe.yml  extension_example.py
extensions/sg-botasaurus/: README.md  pyproject.toml
extensions/sg-botasaurus/src/sg_botasaurus/: __init__.py
extensions/sg-browserless/: README.md  pyproject.toml
extensions/sg-browserless/src/sg_browserless/: __init__.py
extensions/sg-browserless/tests/: test_browserless_provider.py
extensions/sg-cache/: README.md  pyproject.toml
extensions/sg-cache/src/sg_cache/: __init__.py
extensions/sg-camoufox/: README.md  pyproject.toml
extensions/sg-camoufox/src/sg_camoufox/: __init__.py
extensions/sg-cdp/: README.md  pyproject.toml
extensions/sg-cdp/src/sg_cdp/: __init__.py
extensions/sg-crawlee/: README.md  pyproject.toml
extensions/sg-crawlee/src/sg_crawlee/: __init__.py
extensions/sg-helium/: README.md  pyproject.toml
extensions/sg-helium/src/sg_helium/: __init__.py
extensions/sg-nodriver/: README.md  pyproject.toml
extensions/sg-nodriver/src/sg_nodriver/: __init__.py
extensions/sg-patchright/: README.md  pyproject.toml
extensions/sg-patchright/src/sg_patchright/: __init__.py
extensions/sg-playwright/: README.md  pyproject.toml
extensions/sg-playwright/src/sg_playwright/: __init__.py
extensions/sg-pydoll/: README.md  pyproject.toml
extensions/sg-pydoll/src/sg_pydoll/: __init__.py
extensions/sg-requests/: README.md  pyproject.toml
extensions/sg-requests/src/sg_requests/: __init__.py
extensions/sg-scrapling/: README.md  pyproject.toml
extensions/sg-scrapling/src/sg_scrapling/: __init__.py
extensions/sg-scrapy/: README.md  pyproject.toml
extensions/sg-scrapy/src/sg_scrapy/: __init__.py  _worker.py
extensions/sg-seleniumbase/: README.md  pyproject.toml
extensions/sg-seleniumbase/src/sg_seleniumbase/: __init__.py
extensions/sg-sitemap/: README.md  pyproject.toml
extensions/sg-sitemap/src/sg_sitemap/: __init__.py
extensions/sg-spider-rs/: README.md  pyproject.toml
extensions/sg-spider-rs/src/sg_spider_rs/: __init__.py
recipes/: README.md
scripts/: sgw-mcp-smoke.sh
src/scrape_gateway/: __init__.py  cache.py  cli.py  config.py  discovery.py  errors.py  evaluation.py  headers.py  mcp_server.py  memory.py  models.py  progress.py  provider.py  recipes.py  router.py  service.py  telemetry.py  validators.py  web.py
src/scrape_gateway/providers/: __init__.py  brightdata.py  crawl4ai.py  curl_cffi_http.py  firecrawl.py  jina_reader.py  oxylabs.py  raw_http.py  scrape_do.py  scrapedrive.py  scraperapi.py  scrapfly.py  scrapingbee.py  spider_cloud.py  wreq_http.py  zenrows.py
src/scrape_gateway/web_assets/: app.css  app.js  index.html
tests/: conftest.py  test_additional_api_providers.py  test_browser_headers.py  test_cache.py  test_cli.py  test_command_extensions.py  test_config.py  test_crawl4ai_provider.py  test_deployment.py  test_discovery.py  test_errors.py  test_evaluation.py  test_extract.py  test_local_engine_extensions.py  test_mcp_server.py  test_memory.py  test_providers.py  test_recipes.py  test_router.py  test_scrapedrive_live.py  test_scraperapi_live.py  test_search.py  test_service.py  test_sg_cache_extension.py  test_telemetry.py  test_validators.py  test_web.py
tests/fixtures/: consent_validation_cases.json
