[project]
name = "scrape-gateway"
version = "0.1.0"
description = "Open-source scrape gateway with cache, domain memory, provider adapters, and cost-aware fallback."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vlad Radulescu" }]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "markdownify>=0.13",
  "pyyaml>=6.0",
  "rich>=13.0",
  "llm>=0.31",
]

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25", "ruff>=0.8", "respx>=0.22"]

[project.scripts]
scrape-gateway = "scrape_gateway.cli:app"
sg = "scrape_gateway.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrape_gateway"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
