[project]
name = "scrape-gateway"
version = "0.9.2"
description = "Open-source scrape gateway with cache, domain memory, provider adapters, and cost-aware fallback."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vlad Radulescu" }]
dependencies = [
  "httpx>=0.27",
  "typer>=0.12",
  "markdownify>=0.13",
  "pyyaml>=6.0",
  "pydantic>=2.10",
  "rich>=13.0",
  "llm>=0.31",
  "wreq>=0.1",
  "curl_cffi>=0.7",
  "ddgs>=8.0",
]

[project.optional-dependencies]
server = ["fastapi>=0.115", "uvicorn[standard]>=0.34"]
mcp = ["mcp[cli]>=1.12", "uvicorn[standard]>=0.34"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.25", "ruff>=0.8", "respx>=0.22"]

[project.scripts]
scrape-gateway = "scrape_gateway.cli:app"
sgw = "scrape_gateway.cli:app"
sgw-mcp = "scrape_gateway.mcp_server:mcp"

[project.entry-points."scrape_gateway.providers"]
raw_http = "scrape_gateway.providers.raw_http:RawHttpProvider"
wreq = "scrape_gateway.providers.wreq_http:WreqProvider"
curl_cffi = "scrape_gateway.providers.curl_cffi_http:CurlCffiProvider"
scrapedrive = "scrape_gateway.providers.scrapedrive:ScrapeDriveProvider"
scrape_do = "scrape_gateway.providers.scrape_do:ScrapeDoProvider"
scrapingbee = "scrape_gateway.providers.scrapingbee:ScrapingBeeProvider"
scraperapi = "scrape_gateway.providers.scraperapi:ScraperApiProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scrape_gateway"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"src/scrape_gateway/cli.py" = ["E402"]
"tests/test_discovery.py" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = ["live: hits real external services (needs API keys)"]
