[project]
name = "sg-botasaurus"
version = "0.1.0"
description = "Botasaurus request provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.16.0", "botasaurus>=4.0.97"]

[project.entry-points."scrape_gateway.providers"]
botosaurus = "sg_botasaurus:BotasaurusProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_botasaurus"]
