[project]
name = "sg-browserless"
version = "0.1.0"
description = "scrape-gateway provider extension for Browserless rendered HTML and screenshots"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vlad Radulescu" }]
dependencies = [
  "scrape-gateway>=0.5.0",
  "httpx>=0.27",
]

[project.entry-points."scrape_gateway.providers"]
browserless = "sg_browserless:BrowserlessProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_browserless"]
