[project]
name = "sg-camoufox"
version = "0.1.0"
description = "Camoufox anti-detect browser provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.15.0", "camoufox>=0.4"]

[project.entry-points."scrape_gateway.providers"]
camoufox = "sg_camoufox:CamoufoxProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_camoufox"]
