[project]
name = "sg-cdp"
version = "0.1.0"
description = "Chrome and Lightpanda CDP providers for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.16.0", "playwright>=1.60"]

[project.entry-points."scrape_gateway.providers"]
chrome_cdp = "sg_cdp:ChromeCdpProvider"
lightpanda = "sg_cdp:LightpandaProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_cdp"]
