[project]
name = "sg-crawlee"
version = "0.1.0"
description = "Crawlee Playwright provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.15.0", "crawlee[playwright]>=1.5"]

[project.entry-points."scrape_gateway.providers"]
crawlee = "sg_crawlee:CrawleeProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_crawlee"]
