[project]
name = "sg-helium"
version = "0.1.0"
description = "Helium Selenium browser provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.16.0", "helium>=7.0.1"]

[project.entry-points."scrape_gateway.providers"]
helium = "sg_helium:HeliumProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_helium"]
