[project]
name = "sg-nodriver"
version = "0.1.0"
description = "Nodriver Chrome provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.15.0", "nodriver>=0.48"]

[project.entry-points."scrape_gateway.providers"]
nodriver = "sg_nodriver:NodriverProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_nodriver"]
