[project]
name = "sg-playwright"
version = "0.1.0"
description = "Playwright Chromium provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.16.0", "playwright>=1.60"]

[project.entry-points."scrape_gateway.providers"]
playwright = "sg_playwright:PlaywrightProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_playwright"]
