[project]
name = "sg-pydoll"
version = "0.1.0"
description = "Pydoll Chrome DevTools provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.16.0", "pydoll-python>=2.23"]

[project.entry-points."scrape_gateway.providers"]
pydoll = "sg_pydoll:PydollProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_pydoll"]
