[project]
name = "sg-requests"
version = "0.1.0"
description = "Python Requests baseline provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.16.0", "requests>=2.32"]

[project.entry-points."scrape_gateway.providers"]
requests = "sg_requests:RequestsProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_requests"]
