[project]
name = "sg-scrapling"
version = "0.1.0"
description = "Scrapling HTTP and stealth-browser provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.15.0", "scrapling[fetchers]>=0.4.11"]

[project.entry-points."scrape_gateway.providers"]
scrapling = "sg_scrapling:ScraplingProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_scrapling"]
