[project]
name = "sg-scrapy"
version = "0.1.0"
description = "Isolated Scrapy single-page provider for scrape-gateway"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = ["scrape-gateway>=0.16.0", "scrapy>=2.16"]

[project.entry-points."scrape_gateway.providers"]
scrapy = "sg_scrapy:ScrapyProvider"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_scrapy"]
