[project]
name = "sg-sitemap"
version = "0.1.0"
description = "scrape-gateway command extension for sitemap discovery"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Vlad Radulescu" }]
dependencies = [
  "scrape-gateway>=0.4.0",
  "typer>=0.12",
  "rich>=13.0",
]

[project.entry-points."scrape_gateway.commands"]
"sg-sitemap" = "sg_sitemap:register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_sitemap"]
